update MobileMenu, ModalPopup, MainHeader components; add UserNav component and new pages

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
     "Адаптивність",
     "Гумова",
     "Десктопи",
-    "Планшети"
+    "кожної",
+    "модалки",
+    "Планшети",
+    "Стилі"
   ]
 }
