--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.7",
     "@vueuse/core": "^12.7.0",
+    "axios": "^1.9.0",
     "pinia": "^3.0.1",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue3-toastify": "^0.2.8",
     "yup": "^1.6.1"
   },
   "devDependencies": {
